# ai-form-coach

./: .gitignore  README.md  package-lock.json  pyproject.toml  requirements.txt  team2.sqlite
backend/: app_form_coach.db  pyproject.toml  requirements.txt
backend/app/: database.py  main.py  models_db.py
backend/app/api/routes/: analyze.py  workouts.py
backend/app/schemas/: analysis.py
backend/app/services/: analysis_pipeline.py  barbell_tracker.py  evaluation.py  fault_rules.py  feature_engineering.py  feedback_generator.py  overlay_renderer.py  pose_extractor.py  rep_detector.py  smoothing.py  timing_log.py  video_io.py  workout_analytics.py  workout_csv_charts.py
backend/app/services/workout_insights/: data_cleaning.py  insights.py  metrics.py  muscle_mapping.py  routes.py  visualizations.py
backend/app/utils/: data_paths.py  geometry.py  json_sanitize.py  video_io.py  video_result.py  video_urls.py
backend/docs/: task4_feedback_mapping.md
backend/metrics/: mvp_validation_manifest.example.json
backend/scripts/: evaluate_task3.py  validate_mvp.py
backend/tests/: test_analyze_video_selection.py  test_api_video_selection_and_sanitize.py  test_barbell_tracker.py  test_evaluation_metrics.py  test_metrics_and_smoothing.py  test_overlay_pathing.py  test_video_artifact_pipeline.py  test_workout_analytics.py  test_workout_csv_charts.py
chats/: chat1.md
components/: AnalyzeSection.tsx  Hero.tsx  Nav.tsx  RoutinesSection.tsx
data/: README.md
docs/: data_and_validation.md  deployment_and_maintenance.md  final_project_checklist.md  llm_log.md  (+4 more)
(+18 files in other folders)
