[project]
name = "ai-form-coach"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.136.0",
    "uvicorn>=0.44.0",
    "python-multipart>=0.0.26",
    "opencv-python>=4.13.0.92",
    "mediapipe>=0.10.9",
    "numpy>=2.0.2",
    "pandas>=2.0.0",
    "matplotlib>=3.10.0",
    "seaborn>=0.13.0",
    "sqlalchemy>=2.0.49",
    "pydantic>=2.13.3",
]
